--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-time-machine
 defaults:
   - scope:
-      path: "images/"
+      path: "images/*"
     values:
       image: true
   - scope:
